--- a/Homeworks/Homework3/.vscode/settings.json
+++ b/Homeworks/Homework3/.vscode/settings.json
@@ -75,5 +75,5 @@
         "typeindex": "cpp",
         "valarray": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Enabled"
 }
